# ray-tracing-lab-iii

./: .gitignore  AABB.hpp  BVHLeafNode.hpp  BVHNode.hpp  BitMasks.hpp  CMakeLists.txt  Camera.hpp  DirectionalLight.hpp  Entity.hpp  GeomUtil.hpp  HitInfo.hpp  LambertianShader.hpp  Light.hpp  Mesh.hpp  MirrorShader.hpp  Model.cpp  Model.hpp  PartialMesh.hpp  PhongShader.hpp  Plane.hpp  PointLight.hpp  Ray.hpp  RefractionShader.hpp  Renderable.hpp  Scene.hpp  SchlickRefractionShader.hpp  Shader.hpp  Sphere.hpp  TexCoordTestShader.hpp  TexturedLambertianShader.hpp  Triangle.hpp  main.cpp
config/: config.json
models/: spot.tga
